# TurnPlayer

./: .gitignore  CMakeLists.txt  README.md
src/: AudioPlayer.cpp  AudioPlayer.hpp  Color.hpp  main.cpp
src/lib/contrib/: Configure.cmake
